CMAKE_MINIMUM_REQUIRED (VERSION 3.0)

PROJECT ( Snek )

# versions
SET (SNEK_VERSION_MAJOR 1)
SET (SNEK_VERSION_MINOR 0)

# folders
ADD_SUBDIRECTORY (src)
# include_directories ("${PROJECT_SOURCE_DIR}/assets")
# include_directories ("${PROJECT_SOURCE_DIR}/include")
# include_directories ("${PROJECT_SOURCE_DIR}/lib")
